@@ -1,3 +1,9 @@
+2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* theme-method.c: (vfs_module_init): NULL vs. 0
+	* theme-thumbnailer.c: (main): Same
+	* themus-theme-applier.c: (main): Same
+
 2004-12-10  James Henstridge  <james@jamesh.id.au>
 
 	* Makefile.am: update the desktop file database on install, since
